# devhub

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  zensical.toml
backend/devhub-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/devhub-backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/devhub-backend/apps/accounts/management/commands/: devhub_bootstrap_roles.py
backend/devhub-backend/apps/audit/: __init__.py  admin.py  logging.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/devhub-backend/apps/audit/migrations/: 0001_initial.py
backend/devhub-backend/apps/core/: admin.py  exceptions.py  models.py  throttles.py  urls.py  views.py
backend/devhub-backend/apps/core/management/commands/: devhub_check.py
backend/devhub-backend/apps/docker_manager/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/devhub-backend/apps/docker_manager/services/: __init__.py  docker_service.py  exceptions.py
backend/devhub-backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/devhub-backend/config/settings/: base.py  local.py  prod.py
backend/devhub-backend/docs/: api.md  decisions.md
backend/devhub-backend/tests/: conftest.py  test_auth.py  test_bootstrap_command.py  test_containers.py  test_core_endpoints.py  test_docker_system.py  test_permissions.py  test_phase5.py  test_phase6.py  test_phase7.py
docs/: api.md  configuration.md  contributing.md  deployment.md  features.md  getting-started.md  index.md  installation.md  project-structure.md  screenshots.md  troubleshooting.md  (+1 more)
(+70 files in other folders)
